# OpenGL

./: .gitignore  CMakeLists.txt  OpenGL.sln  README.md
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters
Core/src/: Core.h
Core/src/Core/: Application.cpp  Application.h  Cursor.cpp  Cursor.h  EntryPoint.h  Macros.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Renderer.cpp  Renderer.h  Timer.cpp  Timer.h  Window.cpp  Window.h
Core/src/OpenGL/: GLDebug.cpp  GLDebug.h  IndexBuffer.cpp  IndexBuffer.h  ShaderProgram.cpp  ShaderProgram.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Core/src/OpenGL/Entity/: Cube.cpp  Cube.h  Entity.cpp  Entity.h  Lights.cpp  Lights.h  Material.h  Mesh.cpp  Mesh.h  Pyramid.cpp  Pyramid.h  Texture.cpp  Texture.h
Core/src/OpenGL/Shaders/: LightSourceFragment.glsl  LightSourceVertex.glsl  MultipleLightsFragment.glsl  MultipleLightsVertex.glsl
LightingScene/: CMakeLists.txt  LightingScene.vcxproj  LightingScene.vcxproj.filters
LightingScene/src/: LightingScene.cpp  LightingScene.h
